# SatHomology

./: .gitignore  .gitmodules  100 with relen.txt  100 without relen.txt  2.py  3.txt  CMakeLists.txt  GeoBar.sln  GeoBar.vcxproj  GeoBar.vcxproj.filters  LICENCE  LandPKR.py  README.md  SatHomology.make  Untitled-1  bad 3 clusters copy.txt  bad 3 clusters.txt  bad clusters.txt  bad with relen.txt  bad.txt  build.bash  build.sh  clear.sh  desert vs intersection.txt  dp.py  findLong.py  get_test_ataset.py  hyracy correct.txt  imgui.ini  init.sh  landVisualize.py  m.cpp  main.py  postbuild.bat  premake5.lua  proc.py  result.txt  t.py  tests.txt  vcpkg.json
.github/workflows/: msbuild.yml
Bind/: Common.cpp  Common.h  Common.ixx  CoreIO.ixx  Framework.h  Framework.ixx  Json.h  Json.ixx  Lua.h  Lua.ixx  MHashMap.h  MHashMap.ixx  MacroCore.h  Side.ixx  Usings.h
Metadata/: CLASSIC
Release/meta/proj/: vcpkg_abi_info.txt
Tests/: Bartests.cpp  FindClosestTests.cpp  FindCounturTests.cpp  SatTests.cpp  Tests.vcxproj  Tests.vcxproj.filters  TrainerTest.cpp  hang.py  pch.h  test.cpp
backend/: BackImage.cpp  BackImage.h  BackTypes.h  BackTypes.ixx  BarHolders.ixx  BinFile.h  CSBind.h  CSBind.ixx  CacheFiles.h  CacheFiles.ixx  CachedBarcode.cpp  CachedBarcode.h  CachedBarcode.ixx  Classifiers.ixx  Common.h  GeoProcessor.cpp  GeoProcessor.h  GeoProcessor.ixx  JsonState.h  Layers.ixx  MLSettings.h  MatrImg.cpp  MatrImg.h  MatrImg.ixx  MetadataIO.h  MetadataIO.ixx  Module.ixx  ProjectSettings.h  ProjectSettings.ixx  RefSettings.ixx  Settings.ixx  SimpleImgReader.cpp  SimpleImgReader.h  SimpleImgReader.ixx  TrainData.h  TrainData.ixx  geodataprocessor.cpp  geodataprocessor.h  project.cpp  project.h  (+1 more)
backend/Algs/: AugmentTest.cpp  CachedBarcodeAlg.ixx  ClsuterPsn.cpp  Common.h  Common.ixx  CoreLoaders.h  CoreLoaders.ixx  Energy.cpp  Energy.ixx  Exp.cpp  Exp.ixx  Graph.cpp  Lidar.cpp  ObjectDetection.cpp  Resizeagl.cpp  Restore.cpp  Segmentation.cpp  SimpleBar.h  SimpleBar.ixx  Swarm.cpp  Swarm2.cpp
backend/Algs/Gen2/: CellStateGenFactory.cpp  ExpanceColor.cpp  GenCommon.h  GenerateColor.cpp  Trainer.h
backend/Algs/Invariant/: invsize.cpp
backend/Algs/Preview/: Anomalis.cpp
backend/Classifer/: ClassInterface.h  ClassInterface.ixx  ClassicBarClassifer.cpp  ClassicBarClassifer.h  ClassicBarClassifer.ixx  Classifier.h  Classifier.ixx
backend/Clusterizers/: ConverctItem.cpp  ConverctItem.h  ConverctItem.ixx  ExteranlReader.h  ExteranlReader.ixx  KmeansClassifer.cpp  KmeansClassifer.ixx  LandBase.h  LandscapeItem.cpp  LandscapeItem.h  MLSettings.h  MLSettings.ixx  SKLearn.cpp  SKLearn.ixx  SKLearnInterface.h  SortItem.ixx  TSLearn.cpp  TSLearn.ixx  TreeClassifer.ixx  TreeSignClass.h  TreeSignClass.ixx
backend/Core/: RefSettings.h  RefSettings.ixx
backend/Interfaces/: IAlg.ixx  IAlgorithm.cpp  IAlgorithm.h  IAlgorithm.ixx  IBlock.h  IBlock.ixx  ICluster.h  ICluster.ixx  IItem.h  IItem.ixx  MLClasses.ixx
backend/Layers/: GroupLayer.h  GroupLayer.ixx  JsonState.i1xx  JsonState_impl.ixx  JsonState_interface.ixx  RasterBarHolderRLeyer.ixx  RasterLineLayer.cpp  RasterLineLayer.h  RasterLineLayer.ixx  Rasterlayers.h  Rasterlayers.ixx  SimpleLineDisplay.ixx  VectorLayers.h  VectorLayers.ixx  layerInterface.cpp  layerInterface.h  layerInterface.ixx  layers.ixx
backend/ProcBlock/: DatasetClassification.cpp  DiffuseCommon.h  GenColorBlock.cpp  GenLayersBlock.cpp  LandscapeItemsBlock.cpp  MatrixCompareBlock.cpp  RestoreSlice.cpp  test.yaml
backend/ProcBlock/Dataset/: DatasetWork.h  LandscapeCalss.cpp  LandscapeCalss.h  PointClass.h  SelfClassCluster.h  Untitled-1
devtools/: conv.py
frontend/: Application.cpp  Application.h  BarChart.h  BarChart.ixx  DearImguiImpl.cpp  DrawCommon.h  DrawUtils.cpp  DrawUtils.h  DrawUtils.ixx  Framework.h  FrameworkImpl.cpp  FrontTypes.h  GuiBlock.h  GuiBlock.ixx  GuiClassifier.h  GuiClassifier.ixx  GuiCommon.cpp  GuiCommon.h  GuiITemPrevew.h  GuiITemPrevew.ixx  GuiLayers.ixx  GuiOverlap.h  GuiOverlap.ixx  GuiVectorLayer.ixx  GuiWidgets.cpp  GuiWidgets.h  GuiWidgets.ixx  Object3d.ixx  Viewer3d.ixx  frontend.cpp  frontend.h  frontend.ixx  main.cpp
frontend/Layers/: GuiBarHolderRLayers.ixx  GuiDataLayer.h  GuiDataLayer.ixx  GuiLayerVals.h  GuiLayerVals.ixx  GuiLuaLayers.h  GuiLuaLayers.ixx  GuiRasterLayers.h  GuiRasterLayers.ixx  GuiRasterLineLayer.h  GuiRasterLineLayer.ixx  GuiVectorLayers.cpp  GuiVectorLayers.h  GuiVectorLayers.ixx  IGuiLayer.h  IGuiLayer.ixx
frontend/Templates/: GuiRLayerTemplates.ixx  GuiRasterTools.h  GuiRasterTools.ixx
frontend/Widgets/: DrawBarcode.h  DrawBarcode.ixx  DynamicSettings.h  DynamicSettings.ixx  GuiAlg.h  GuiAlg.ixx  GuiClusterization.h  GuiClusterization.ixx  GuiFilter.h  GuiFilter.ixx
libs/: sqlite3.lib
libs/glew/: glew32s.lib
libs/jsoncpp/Release/: jsoncpp.lib
libs/lua/lib/: liblua5.4.4.lib  lua5.4.4.exp  luac.exp  luac.lib
libs/lua/src/: Makefile.nmake  lua5.4.4.lib
python_extra/: 1.py  BinState.py  augment-test.py  augment.py  displayBarcode.py  get_test_ataset.py  landVisualize.py  liblab.py  lidar.py  tableVis2.py  tableVisual.py
side/: GuiCodeEditor.cpp  GuiCodeEditor.h  Hungarian.cpp  Lua.ixx  PortFileDialog.h  json.hpp  kde.h  stb_image_write.h  subprocess.h
side/flat_hash_map/: flat_hash_map.hpp  unordered_map.hpp
side/glm/: common.hpp  fwd.hpp  integer.hpp  packing.hpp
side/glm/detail/: func_common.inl  func_common_simd.inl  func_exponential.inl  func_integer.inl  func_integer_simd.inl  func_packing.inl  setup.hpp  type_vec4_simd.inl
side/glm/ext/: matrix_uint2x2.hpp  matrix_uint2x3.hpp  matrix_uint2x4.hpp  matrix_uint3x2.hpp  matrix_uint3x3.hpp  matrix_uint3x4.hpp  matrix_uint4x2.hpp  matrix_uint4x3.hpp  matrix_uint4x4.hpp  scalar_common.hpp  scalar_common.inl  vector_common.hpp  vector_common.inl
side/glm/gtc/: matrix_integer.hpp  packing.hpp  packing.inl  type_aligned.hpp  type_precision.hpp
side/glm/gtx/: integer.hpp  integer.inl
side/sqlite/: buid.txt  sqlite3.exp
side/tsl/: robin_hash.h
